--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
   </head>
   <body>
     <div class="header">Kristina's Epic Stuff</div>
+    <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="pages/cat.html">Cat</a>
+      <a href="pages/painting.html">Paintings</a>
+    </div>
   </body>
 </html>
