--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
       <a href="pages/cat.html">Cat</a>
       <a href="pages/painting.html">Paintings</a>
     </div>
+    <div class="content">
+      <div style="font-size: 100px">HELLO</div>
+      <h2 style="font-size: 32px">Welcome to my page</h2>
+      <dov style="font-size: 21px">Click around to see very cool stuff</dov>
+    </div>
   </body>
 </html>
