--- a/pages/cat.html
+++ b/pages/cat.html
@@ -10,5 +10,13 @@
       <a class="active" href="cat.html">Cat</a>
       <a href="painting.html">Paintings</a>
     </div>
+    <div class="content">
+      <div class="card">
+        <img
+          src="https://i.natgeofe.com/n/548467d8-c5f1-4551-9f58-6817a8d2c45e/NationalGeographic_2572187_square.jpg"/>
+        <h1>Cool cat</h1>
+        <p>He do be kinda vibin</p>
+      </div>
+    </div>
   </body>
 </html>
