--- a/pages/cat.html
+++ b/pages/cat.html
@@ -13,39 +13,87 @@
     <div class="content cards">
       <div class="card">
         <img
-          src="https://i.natgeofe.com/n/548467d8-c5f1-4551-9f58-6817a8d2c45e/NationalGeographic_2572187_square.jpg"/>
-        <h1>Cool cat</h1>
-        <p>He do be kinda vibin</p>
+          src="../images/cat/bat.jpg"
+          alt="A black cat in bed"/>
+        <h1>Eepy</h1>
+        <p>She really likes sleeping (and looks adorable while doing it)</p>
       </div>
       <div class="card">
         <img
-          src="https://i.natgeofe.com/n/548467d8-c5f1-4551-9f58-6817a8d2c45e/NationalGeographic_2572187_square.jpg"/>
-        <h1>Cool cat</h1>
-        <p>He do be kinda vibin</p>
+          src="../images/cat/bigstretch.jpg"
+          alt="A black cat stretching"/>
+        <h1>Big stretch</h1>
+        <p>I can feel it in my bones too</p>
       </div>
       <div class="card">
         <img
-          src="https://i.natgeofe.com/n/548467d8-c5f1-4551-9f58-6817a8d2c45e/NationalGeographic_2572187_square.jpg"/>
-        <h1>Cool cat</h1>
-        <p>He do be kinda vibin</p>
+          src="../images/cat/blep.jpg"
+          alt="A black cat on a chair with tongue sticking out"/>
+        <h1>Blep</h1>
+        <p>Derpy lil dude</p>
       </div>
       <div class="card">
         <img
-          src="https://i.natgeofe.com/n/548467d8-c5f1-4551-9f58-6817a8d2c45e/NationalGeographic_2572187_square.jpg"/>
-        <h1>Cool cat</h1>
-        <p>He do be kinda vibin</p>
+          src="../images/cat/collar.jpg"
+          alt="A black cat wit a collar"/>
+        <h1>New collar</h1>
+        <p>Her first time trying on a collar (fashionable!)</p>
       </div>
       <div class="card">
         <img
-          src="https://i.natgeofe.com/n/548467d8-c5f1-4551-9f58-6817a8d2c45e/NationalGeographic_2572187_square.jpg"/>
-        <h1>Cool cat</h1>
-        <p>He do be kinda vibin</p>
+          src="../images/cat/depression.jpg"
+          alt="A black cat looking down"/>
+        <h1>Sadness</h1>
+        <p>Me when I'm sad</p>
       </div>
       <div class="card">
         <img
-          src="https://i.natgeofe.com/n/548467d8-c5f1-4551-9f58-6817a8d2c45e/NationalGeographic_2572187_square.jpg"/>
-        <h1>Cool cat</h1>
-        <p>He do be kinda vibin</p>
+          src="../images/cat/feedme.jpg"
+          alt="A black cat with paws on a table"/>
+        <h1>Feed me</h1>
+        <p>She demands food, better share</p>
+      </div>
+      <div class="card">
+        <img
+          src="../images/cat/flusteredemoji.jpg"
+          alt="A black cat with big eyes"/>
+        <h1>😳😳😳😳😳</h1>
+        <p>😳😳😳😳😳😳😳😳😳😳😳</p>
+      </div>
+      <div class="card">
+        <img
+          src="../images/cat/mountain.jpg"
+          alt="A black cat on top of a pile"/>
+        <h1>Mountain</h1>
+        <p>Literally climbed the Everest, so proud</p>
+      </div>
+      <div class="card">
+        <img
+          src="../images/cat/nom.jpg"
+          alt="A black cat eating"/>
+        <h1>Nom</h1>
+        <p>Idk what it is but looks tasty?</p>
+      </div>
+      <div class="card">
+        <img
+          src="../images/cat/princess.jpg"
+          alt="A black cat"/>
+        <h1>Royalty</h1>
+        <p>A literal princess, I am honoured to be conquered</p>
+      </div>
+      <div class="card">
+        <img
+          src="../images/cat/sitting.jpeg"
+          alt="A black cat with a collar"/>
+        <h1>Chill</h1>
+        <p>Just hanging out</p>
+      </div>
+      <div class="card">
+        <img
+          src="../images/cat/socialmedia.jpg"
+          alt="A black cat laying next to a phone"/>
+        <h1>Social media is toxic</h1>
+        <p>Stop doom scrolling, it gives sadness</p>
       </div>
     </div>
   </body>
