--- a/pages/painting.html
+++ b/pages/painting.html
@@ -10,5 +10,99 @@
       <a href="cat.html">Cat</a>
       <a class="active" href="painting.html">Paintings</a>
     </div>
+
+    <div class="content cards">
+      <div class="card">
+        <img
+          src="../images/paintings/breadcat.jpg"
+          alt="A painting of a cat with bread on it's head"
+        />
+        <h1>Bread cat</h1>
+        <p>
+          Random cat that used to come to our garden, but royalty with bread on
+          her head
+        </p>
+      </div>
+      <div class="card">
+        <img
+          src="../images/paintings/businesscat.jpg"
+          alt="A painting of a black cat with a tie in front of a laptop"
+        />
+        <h1>Business cat</h1>
+        <p>
+          This is my friend's cat he was kinda fat and liked sitting in weird
+          ways
+        </p>
+      </div>
+      <div class="card">
+        <img
+          src="../images/paintings/child.jpg"
+          alt="A painting of a child on a bench"
+        />
+        <h1>Dearest sister</h1>
+        <p>My little sister on a bench, looked kinda iconic</p>
+      </div>
+      <div class="card">
+        <img
+          src="../images/paintings/flowers.jpg"
+          alt="A painting of orchids"
+        />
+        <h1>Orchids</h1>
+        <p>Just some cool flowers I guess</p>
+      </div>
+      <div class="card">
+        <img
+          src="../images/paintings/forg.jpg"
+          alt="A painting of a frog on lilly pads"
+        />
+        <h1>Forg</h1>
+        <p>He's just hanging out in the swamp</p>
+      </div>
+      <div class="card">
+        <img
+          src="../images/paintings/frogking.jpg"
+          alt="A painting of a frog in royal clothes"
+        />
+        <h1>Frog king</h1>
+        <p>A royal rendition of the iconic frog drawing</p>
+      </div>
+      <div class="card">
+        <img
+          src="../images/paintings/goose.jpg"
+          alt="A digital painting of a goose"
+        />
+        <h1>Goose</h1>
+        <p>I don't like geese they're evil</p>
+      </div>
+      <div class="card">
+        <img src="../images/paintings/plant.jpg" alt="A painting of a plant" />
+        <h1>Plant</h1>
+        <p>Just a cool plant idk</p>
+      </div>
+      <div class="card">
+        <img
+          src="../images/paintings/rabbit.jpg"
+          alt="A painting of a rabbit in a forest"
+        />
+        <h1>Rabbit</h1>
+        <p>Just thought it would be cute</p>
+      </div>
+      <div class="card">
+        <img
+          src="../images/paintings/rooster.png"
+          alt="A digital painting of a rooster"
+        />
+        <h1>Rooster</h1>
+        <p>He has no other names</p>
+      </div>
+      <div class="card">
+        <img
+          src="../images/paintings/royalcats.jpg"
+          alt="A painting of cats on a fancy chair"
+        />
+        <h1>Royal cats</h1>
+        <p>I made this one for my friend Oliver it's his cats</p>
+      </div>
+    </div>
   </body>
 </html>
