Add titles to pages

--- a/pages/cat.html
+++ b/pages/cat.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="../styles/main.css" />
+    <title>Kristina's Epic Stuff - Cat</title>
   </head>
   <body>
     <div class="header">Kristina's Epic Stuff</div>
