--- a/pages/painting.html
+++ b/pages/painting.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="../styles/main.css" />
+    <title>Kristina's Epic Stuff - Paintings</title>
   </head>
   <body>
     <div class="header">Kristina's Epic Stuff</div>
