--- a/pages/cat.html
+++ b/pages/cat.html
@@ -11,6 +11,9 @@
       <a class="active" href="cat.html">Cat</a>
       <a href="painting.html">Paintings</a>
     </div>
+    <div class="content text">
+      This is my new kitten Missy she is very cute you should look at her
+    </div>
     <div class="content cards">
       <div class="card">
         <img
