--- a/pages/painting.html
+++ b/pages/painting.html
@@ -11,7 +11,9 @@
       <a href="cat.html">Cat</a>
       <a class="active" href="painting.html">Paintings</a>
     </div>
-
+    <div class="content text">
+      These are some cool paintings that I made
+    </div>
     <div class="content cards">
       <div class="card">
         <img
