--- a/src/pages/cat.html
+++ b/src/pages/cat.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="../styles/main.css" />
+    <link rel="stylesheet" href="../../build/styles/main.css" />
     <title>Kristina's Epic Stuff - Cat</title>
   </head>
   <body>
     <div class="header">Kristina's Epic Stuff</div>
     <div class="topnav">
-      <a href="../index.html">Home</a>
+      <a href="../../index.html">Home</a>
       <a class="active" href="cat.html">Cat</a>
       <a href="painting.html">Paintings</a>
     </div>
@@ -17,84 +17,84 @@
     <div class="content cards">
       <div class="card">
         <img
-          src="../images/cat/bat.jpg"
+          src="../../images/cat/bat.jpg"
           alt="A black cat in bed"/>
         <h1>Eepy</h1>
         <p>She really likes sleeping (and looks adorable while doing it)</p>
       </div>
       <div class="card">
         <img
-          src="../images/cat/bigstretch.jpg"
+          src="../../images/cat/bigstretch.jpg"
           alt="A black cat stretching"/>
         <h1>Big stretch</h1>
         <p>I can feel it in my bones too</p>
       </div>
       <div class="card">
         <img
-          src="../images/cat/blep.jpg"
+          src="../../images/cat/blep.jpg"
           alt="A black cat on a chair with tongue sticking out"/>
         <h1>Blep</h1>
         <p>Derpy lil dude</p>
       </div>
       <div class="card">
         <img
-          src="../images/cat/collar.jpg"
+          src="../../images/cat/collar.jpg"
           alt="A black cat wit a collar"/>
         <h1>New collar</h1>
         <p>Her first time trying on a collar (fashionable!)</p>
       </div>
       <div class="card">
         <img
-          src="../images/cat/depression.jpg"
+          src="../../images/cat/depression.jpg"
           alt="A black cat looking down"/>
         <h1>Sadness</h1>
         <p>Me when I'm sad</p>
       </div>
       <div class="card">
         <img
-          src="../images/cat/feedme.jpg"
+          src="../../images/cat/feedme.jpg"
           alt="A black cat with paws on a table"/>
         <h1>Feed me</h1>
         <p>She demands food, better share</p>
       </div>
       <div class="card">
         <img
-          src="../images/cat/flusteredemoji.jpg"
+          src="../../images/cat/flusteredemoji.jpg"
           alt="A black cat with big eyes"/>
         <h1>😳😳😳😳😳</h1>
         <p>😳😳😳😳😳😳😳😳😳😳😳</p>
       </div>
       <div class="card">
         <img
-          src="../images/cat/mountain.jpg"
+          src="../../images/cat/mountain.jpg"
           alt="A black cat on top of a pile"/>
         <h1>Mountain</h1>
         <p>Literally climbed the Everest, so proud</p>
       </div>
       <div class="card">
         <img
-          src="../images/cat/nom.jpg"
+          src="../../images/cat/nom.jpg"
           alt="A black cat eating"/>
         <h1>Nom</h1>
         <p>Idk what it is but looks tasty?</p>
       </div>
       <div class="card">
         <img
-          src="../images/cat/princess.jpg"
+          src="../../images/cat/princess.jpg"
           alt="A black cat"/>
         <h1>Royalty</h1>
         <p>A literal princess, I am honoured to be conquered</p>
       </div>
       <div class="card">
         <img
-          src="../images/cat/sitting.jpeg"
+          src="../../images/cat/sitting.jpeg"
           alt="A black cat with a collar"/>
         <h1>Chill</h1>
         <p>Just hanging out</p>
       </div>
       <div class="card">
         <img
-          src="../images/cat/socialmedia.jpg"
+          src="../../images/cat/socialmedia.jpg"
           alt="A black cat laying next to a phone"/>
         <h1>Social media is toxic</h1>
         <p>Stop doom scrolling, it gives sadness</p>
