--- a/src/pages/painting.html
+++ b/src/pages/painting.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="../styles/main.css" />
+    <link rel="stylesheet" href="../../build/styles/main.css" />
     <title>Kristina's Epic Stuff - Paintings</title>
   </head>
   <body>
     <div class="header">Kristina's Epic Stuff</div>
     <div class="topnav">
-      <a href="../index.html">Home</a>
+      <a href="../../index.html">Home</a>
       <a href="cat.html">Cat</a>
       <a class="active" href="painting.html">Paintings</a>
     </div>
@@ -17,7 +17,7 @@
     <div class="content cards">
       <div class="card">
         <img
-          src="../images/paintings/breadcat.jpg"
+          src="../../images/paintings/breadcat.jpg"
           alt="A painting of a cat with bread on it's head"
         />
         <h1>Bread cat</h1>
@@ -28,7 +28,7 @@
       </div>
       <div class="card">
         <img
-          src="../images/paintings/businesscat.jpg"
+          src="../../images/paintings/businesscat.jpg"
           alt="A painting of a black cat with a tie in front of a laptop"
         />
         <h1>Business cat</h1>
@@ -39,7 +39,7 @@
       </div>
       <div class="card">
         <img
-          src="../images/paintings/child.jpg"
+          src="../../images/paintings/child.jpg"
           alt="A painting of a child on a bench"
         />
         <h1>Dearest sister</h1>
@@ -47,7 +47,7 @@
       </div>
       <div class="card">
         <img
-          src="../images/paintings/flowers.jpg"
+          src="../../images/paintings/flowers.jpg"
           alt="A painting of orchids"
         />
         <h1>Orchids</h1>
@@ -55,7 +55,7 @@
       </div>
       <div class="card">
         <img
-          src="../images/paintings/forg.jpg"
+          src="../../images/paintings/forg.jpg"
           alt="A painting of a frog on lilly pads"
         />
         <h1>Forg</h1>
@@ -63,7 +63,7 @@
       </div>
       <div class="card">
         <img
-          src="../images/paintings/frogking.jpg"
+          src="../../images/paintings/frogking.jpg"
           alt="A painting of a frog in royal clothes"
         />
         <h1>Frog king</h1>
@@ -71,20 +71,20 @@
       </div>
       <div class="card">
         <img
-          src="../images/paintings/goose.jpg"
+          src="../../images/paintings/goose.jpg"
           alt="A digital painting of a goose"
         />
         <h1>Goose</h1>
         <p>I don't like geese they're evil</p>
       </div>
       <div class="card">
-        <img src="../images/paintings/plant.jpg" alt="A painting of a plant" />
+        <img src="../../images/paintings/plant.jpg" alt="A painting of a plant" />
         <h1>Plant</h1>
         <p>Just a cool plant idk</p>
       </div>
       <div class="card">
         <img
-          src="../images/paintings/rabbit.jpg"
+          src="../../images/paintings/rabbit.jpg"
           alt="A painting of a rabbit in a forest"
         />
         <h1>Rabbit</h1>
@@ -92,7 +92,7 @@
       </div>
       <div class="card">
         <img
-          src="../images/paintings/rooster.png"
+          src="../../images/paintings/rooster.png"
           alt="A digital painting of a rooster"
         />
         <h1>Rooster</h1>
@@ -100,7 +100,7 @@
       </div>
       <div class="card">
         <img
-          src="../images/paintings/royalcats.jpg"
+          src="../../images/paintings/royalcats.jpg"
           alt="A painting of cats on a fancy chair"
         />
         <h1>Royal cats</h1>
