--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="build/styles/main.css" />
     <title>Kristina's Epic Stuff - Home</title>
   </head>
   <body>
     <div class="header">Kristina's Epic Stuff</div>
     <div class="topnav">
       <a class="active" href="#home">Home</a>
-      <a href="pages/cat.html">Cat</a>
-      <a href="pages/painting.html">Paintings</a>
+      <a href="src/pages/cat.html">Cat</a>
+      <a href="src/pages/painting.html">Paintings</a>
     </div>
     <div class="content main">
       <div style="font-size: 100px">HELLO</div>
