Add a comment box

--- a/src/pages/cat.html
+++ b/src/pages/cat.html
@@ -100,5 +100,11 @@
         <p>Stop doom scrolling, it gives sadness</p>
       </div>
     </div>
+    <h1 class="content">Leave a comment!</h1>
+    <form>
+      <input type="text" placeholder="Your name">
+      <textarea placeholder="Comment"></textarea>
+      <input type="submit" class="submit-button">
+    </form>
   </body>
 </html>
