--- a/src/pages/painting.html
+++ b/src/pages/painting.html
@@ -107,5 +107,11 @@
         <p>I made this one for my friend Oliver it's his cats</p>
       </div>
     </div>
+    <h1 class="content">Leave a comment!</h1>
+    <form>
+      <input type="text" placeholder="Your name">
+      <textarea placeholder="Comment"></textarea>
+      <input type="submit" class="submit-button">
+    </form>
   </body>
 </html>
