Add form redirect page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="content main">
       <div style="font-size: 100px">HELLO</div>
       <h2 style="font-size: 32px">Welcome to my page</h2>
-      <dov style="font-size: 21px">Click around to see very cool stuff</dov>
+      <div style="font-size: 21px">Click around to see very cool stuff</div>
     </div>
   </body>
 </html>
