--- a/src/pages/painting.html
+++ b/src/pages/painting.html
@@ -108,7 +108,7 @@
       </div>
     </div>
     <h1 class="content">Leave a comment!</h1>
-    <form>
+    <form action="formSubmit.html">
       <input type="text" placeholder="Your name">
       <textarea placeholder="Comment"></textarea>
       <input type="submit" class="submit-button">
