--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <a class="active" href="#home">Home</a>
       <a href="src/pages/cat.html">Cat</a>
       <a href="src/pages/painting.html">Paintings</a>
+      <a href="src/pages/gifs.html">Gifs</a>
     </div>
     <div class="content main">
       <div style="font-size: 100px">HELLO</div>
