--- a/src/pages/cat.html
+++ b/src/pages/cat.html
@@ -10,6 +10,7 @@
       <a href="../../index.html">Home</a>
       <a class="active" href="cat.html">Cat</a>
       <a href="painting.html">Paintings</a>
+      <a href="gifs.html">Gifs</a>
     </div>
     <div class="content text">
       This is my new kitten Missy she is very cute you should look at her
