--- a/src/pages/painting.html
+++ b/src/pages/painting.html
@@ -10,6 +10,7 @@
       <a href="../../index.html">Home</a>
       <a href="cat.html">Cat</a>
       <a class="active" href="painting.html">Paintings</a>
+      <a href="gifs.html">Gifs</a>
     </div>
     <div class="content text">
       These are some cool paintings that I made
