--- a/src/pages/gifs.html
+++ b/src/pages/gifs.html
@@ -10,13 +10,10 @@
       <a href="../../index.html">Home</a>
       <a href="cat.html">Cat</a>
       <a href="painting.html">Paintings</a>
-      <a href="gifs.html">Gifs</a>
+      <a class="active" href="gifs.html">Gifs</a>
     </div>
     <div class="content main">
-      <div style="font-size: 100px">CONGRATS</div>
-      <h2 style="font-size: 32px">You submitted a comment</h2>
-      <div style="font-size: 21px">It didn't go anywhere, the form doesn't work</div>
-      <button onclick="window.location.href='../../index.html'">Return to homepage</button>
+    
     </div>
   </body>
 </html>
