--- a/src/pages/gifs.html
+++ b/src/pages/gifs.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" href="../../build/styles/main.css" />
     <title>Kristina's Epic Stuff - Home</title>
   </head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="../scripts/gif.js"></script>
   <body>
     <div class="header">Kristina's Epic Stuff</div>
     <div class="topnav">
@@ -12,8 +14,7 @@
       <a href="painting.html">Paintings</a>
       <a class="active" href="gifs.html">Gifs</a>
     </div>
-    <div class="content main">
-    
+    <div class="content cards">
     </div>
   </body>
 </html>
