Make pages tabbable

--- a/index.html
+++ b/index.html
@@ -18,4 +18,5 @@
       <div style="font-size: 21px">Click around to see very cool stuff</div>
     </div>
   </body>
+  <script src="src/scripts/setTabindex.js"></script>
 </html>
