--- a/src/pages/painting.html
+++ b/src/pages/painting.html
@@ -115,4 +115,5 @@
       <input type="submit" class="submit-button">
     </form>
   </body>
+  <script src="../scripts/setTabindex.js"></script>
 </html>
