--- a/src/pages/formSubmit.html
+++ b/src/pages/formSubmit.html
@@ -19,4 +19,5 @@
       <button onclick="window.location.href='../../index.html'">Return to homepage</button>
     </div>
   </body>
+  <script src="../scripts/setTabindex.js"></script>
 </html>
