--- a/src/pages/cat.html
+++ b/src/pages/cat.html
@@ -5,7 +5,7 @@
     <title>Kristina's Epic Stuff - Cat</title>
   </head>
   <body>
-    <div class="header">Kristina's Epic Stuff</div>
+    <header>Kristina's Epic Stuff</header>
     <div class="topnav">
       <a href="../../index.html">Home</a>
       <a class="active" href="cat.html">Cat</a>
