--- a/src/pages/gifs.html
+++ b/src/pages/gifs.html
@@ -6,7 +6,7 @@
   </head>
   <script src="../scripts/gif.js"></script>
   <body>
-    <div class="header">Kristina's Epic Stuff</div>
+    <header>Kristina's Epic Stuff</header>
     <div class="topnav">
       <a href="../../index.html">Home</a>
       <a href="cat.html">Cat</a>
@@ -16,5 +16,4 @@
     <div class="content cards">
     </div>
   </body>
-  <script src="../scripts/setTabindex.js"></script>
 </html>
