--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Kristina's Epic Stuff - Home</title>
   </head>
   <body>
-    <div class="header">Kristina's Epic Stuff</div>
+    <header>Kristina's Epic Stuff</header>
     <div class="topnav">
       <a class="active" href="#home">Home</a>
       <a href="src/pages/cat.html">Cat</a>
