--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   </head>
   <body>
     <header>Kristina's Epic Stuff</header>
-    <div class="topnav">
+    <nav>
       <a class="active" href="#home">Home</a>
       <a href="src/pages/cat.html">Cat</a>
       <a href="src/pages/painting.html">Paintings</a>
       <a href="src/pages/gifs.html">Gifs</a>
-    </div>
+    </nav>
     <div class="content main">
       <div style="font-size: 100px">HELLO</div>
       <h2 style="font-size: 32px">Welcome to my page</h2>
