--- a/src/pages/gifs.html
+++ b/src/pages/gifs.html
@@ -7,12 +7,12 @@
   <script src="../scripts/gif.js"></script>
   <body>
     <header>Kristina's Epic Stuff</header>
-    <div class="topnav">
+    <nav>
       <a href="../../index.html">Home</a>
       <a href="cat.html">Cat</a>
       <a href="painting.html">Paintings</a>
       <a class="active" href="gifs.html">Gifs</a>
-    </div>
+    </nav>
     <div class="content cards">
     </div>
   </body>
