--- a/src/pages/cat.html
+++ b/src/pages/cat.html
@@ -6,12 +6,12 @@
   </head>
   <body>
     <header>Kristina's Epic Stuff</header>
-    <div class="topnav">
+    <nav>
       <a href="../../index.html">Home</a>
       <a class="active" href="cat.html">Cat</a>
       <a href="painting.html">Paintings</a>
       <a href="gifs.html">Gifs</a>
-    </div>
+    </nav>
     <div class="content text">
       This is my new kitten Missy she is very cute you should look at her
     </div>
