--- a/src/pages/formSubmit.html
+++ b/src/pages/formSubmit.html
@@ -6,12 +6,12 @@
   </head>
   <body>
     <header>Kristina's Epic Stuff</header>
-    <div class="topnav">
+    <nav>
       <a href="../../index.html">Home</a>
       <a href="cat.html">Cat</a>
       <a href="painting.html">Paintings</a>
       <a href="gifs.html">Gifs</a>
-    </div>
+    </nav>
     <div class="content main">
       <div style="font-size: 100px">CONGRATS</div>
       <h2 style="font-size: 32px">You submitted a comment</h2>
