--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <a href="src/pages/painting.html">Paintings</a>
       <a href="src/pages/gifs.html">Gifs</a>
     </nav>
-    <div class="content main">
+    <section class="main">
       <div style="font-size: 100px">HELLO</div>
       <h2 style="font-size: 32px">Welcome to my page</h2>
       <div style="font-size: 21px">Click around to see very cool stuff</div>
-    </div>
+    </section>
   </body>
   <script src="src/scripts/setTabindex.js"></script>
 </html>
