--- a/src/pages/cat.html
+++ b/src/pages/cat.html
@@ -12,10 +12,10 @@
       <a href="painting.html">Paintings</a>
       <a href="gifs.html">Gifs</a>
     </nav>
-    <div class="content text">
+    <section class="text">
       This is my new kitten Missy she is very cute you should look at her
-    </div>
-    <div class="content cards">
+    </section>
+    <section class="cards">
       <div class="card">
         <img
           src="../../images/cat/bat.jpg"
@@ -100,8 +100,10 @@
         <h1>Social media is toxic</h1>
         <p>Stop doom scrolling, it gives sadness</p>
       </div>
-    </div>
-    <h1 class="content">Leave a comment!</h1>
+    </section>
+    <section class="content">
+      <h2>Leave a comment!</h2>
+    </section>
     <form action="formSubmit.html">
       <input type="text" placeholder="Your name">
       <textarea placeholder="Comment"></textarea>
