--- a/src/pages/formSubmit.html
+++ b/src/pages/formSubmit.html
@@ -12,12 +12,12 @@
       <a href="painting.html">Paintings</a>
       <a href="gifs.html">Gifs</a>
     </nav>
-    <div class="content main">
+    <section class="main">
       <div style="font-size: 100px">CONGRATS</div>
       <h2 style="font-size: 32px">You submitted a comment</h2>
       <div style="font-size: 21px">It didn't go anywhere, the form doesn't work</div>
       <button onclick="window.location.href='../../index.html'">Return to homepage</button>
-    </div>
+    </section>
   </body>
   <script src="../scripts/setTabindex.js"></script>
 </html>
