--- a/src/pages/gifs.html
+++ b/src/pages/gifs.html
@@ -13,7 +13,7 @@
       <a href="painting.html">Paintings</a>
       <a class="active" href="gifs.html">Gifs</a>
     </nav>
-    <div class="content cards">
-    </div>
+    <section class="cards">
+    </section>
   </body>
 </html>
