--- a/src/pages/painting.html
+++ b/src/pages/painting.html
@@ -12,10 +12,8 @@
       <a class="active" href="painting.html">Paintings</a>
       <a href="gifs.html">Gifs</a>
     </nav>
-    <div class="content text">
-      These are some cool paintings that I made
-    </div>
-    <div class="content cards">
+    <section class="text">These are some cool paintings that I made</section>
+    <section class="cards">
       <div class="card">
         <img
           src="../../images/paintings/breadcat.jpg"
@@ -79,7 +77,10 @@
         <p>I don't like geese they're evil</p>
       </div>
       <div class="card">
-        <img src="../../images/paintings/plant.jpg" alt="A painting of a plant" />
+        <img
+          src="../../images/paintings/plant.jpg"
+          alt="A painting of a plant"
+        />
         <h1>Plant</h1>
         <p>Just a cool plant idk</p>
       </div>
@@ -107,12 +108,14 @@
         <h1>Royal cats</h1>
         <p>I made this one for my friend Oliver it's his cats</p>
       </div>
-    </div>
-    <h1 class="content">Leave a comment!</h1>
+    </section>
+    <section>    
+      <h1>Leave a comment!</h1>
+    </section>
     <form action="formSubmit.html">
-      <input type="text" placeholder="Your name">
+      <input type="text" placeholder="Your name" />
       <textarea placeholder="Comment"></textarea>
-      <input type="submit" class="submit-button">
+      <input type="submit" class="submit-button" />
     </form>
   </body>
   <script src="../scripts/setTabindex.js"></script>
