--- a/src/pages/cat.html
+++ b/src/pages/cat.html
@@ -16,90 +16,90 @@
       This is my new kitten Missy she is very cute you should look at her
     </section>
     <section class="cards">
-      <div class="card">
+      <figure>
         <img
           src="../../images/cat/bat.jpg"
           alt="A black cat in bed"/>
-        <h1>Eepy</h1>
-        <p>She really likes sleeping (and looks adorable while doing it)</p>
-      </div>
-      <div class="card">
+        <h3>Eepy</h3>
+        <figcaption>She really likes sleeping (and looks adorable while doing it)</figcaption>
+      </figure>
+      <figure>
         <img
           src="../../images/cat/bigstretch.jpg"
           alt="A black cat stretching"/>
-        <h1>Big stretch</h1>
-        <p>I can feel it in my bones too</p>
-      </div>
-      <div class="card">
+        <h3>Big stretch</h3>
+        <figcaption>I can feel it in my bones too</figcaption>
+       </figure>
+      <figure>
         <img
           src="../../images/cat/blep.jpg"
           alt="A black cat on a chair with tongue sticking out"/>
-        <h1>Blep</h1>
-        <p>Derpy lil dude</p>
-      </div>
-      <div class="card">
+        <h3>Blep</h3>
+        <figcaption>Derpy lil dude</figcaption>
+       </figure>
+      <figure>
         <img
           src="../../images/cat/collar.jpg"
           alt="A black cat wit a collar"/>
-        <h1>New collar</h1>
-        <p>Her first time trying on a collar (fashionable!)</p>
-      </div>
-      <div class="card">
+        <h3>New collar</h3>
+        <figcaption>Her first time trying on a collar (fashionable!)</figcaption>
+       </figure>
+      <figure>
         <img
           src="../../images/cat/depression.jpg"
           alt="A black cat looking down"/>
-        <h1>Sadness</h1>
-        <p>Me when I'm sad</p>
-      </div>
-      <div class="card">
+        <h3>Sadness</h3>
+        <figcaption>Me when I'm sad</figcaption>
+       </figure>
+      <figure>
         <img
           src="../../images/cat/feedme.jpg"
           alt="A black cat with paws on a table"/>
-        <h1>Feed me</h1>
-        <p>She demands food, better share</p>
-      </div>
-      <div class="card">
+        <h3>Feed me</h3>
+        <figcaption>She demands food, better share</figcaption>
+       </figure>
+      <figure>
         <img
           src="../../images/cat/flusteredemoji.jpg"
           alt="A black cat with big eyes"/>
-        <h1>😳😳😳😳😳</h1>
-        <p>😳😳😳😳😳😳😳😳😳😳😳</p>
-      </div>
-      <div class="card">
+        <h3>😳😳😳😳😳</h3>
+        <figcaption>😳😳😳😳😳😳😳😳😳😳😳</figcaption>
+       </figure>
+      <figure>
         <img
           src="../../images/cat/mountain.jpg"
           alt="A black cat on top of a pile"/>
-        <h1>Mountain</h1>
-        <p>Literally climbed the Everest, so proud</p>
-      </div>
-      <div class="card">
+        <h3>Mountain</h3>
+        <figcaption>Literally climbed the Everest, so proud</figcaption>
+       </figure>
+      <figure>
         <img
           src="../../images/cat/nom.jpg"
           alt="A black cat eating"/>
-        <h1>Nom</h1>
-        <p>Idk what it is but looks tasty?</p>
-      </div>
-      <div class="card">
+        <h3>Nom</h3>
+        <figcaption>Idk what it is but looks tasty?</figcaption>
+       </figure>
+      <figure>
         <img
           src="../../images/cat/princess.jpg"
           alt="A black cat"/>
-        <h1>Royalty</h1>
-        <p>A literal princess, I am honoured to be conquered</p>
-      </div>
-      <div class="card">
+        <h3>Royalty</h3>
+        <figcaption>A literal princess, I am honoured to be conquered</figcaption>
+       </figure>
+      <figure>
         <img
           src="../../images/cat/sitting.jpeg"
           alt="A black cat with a collar"/>
-        <h1>Chill</h1>
-        <p>Just hanging out</p>
-      </div>
-      <div class="card">
+        <h3>Chill</h3>
+        <figcaption>Just hanging out</figcaption>
+       </figure>
+      <figure>
         <img
           src="../../images/cat/socialmedia.jpg"
           alt="A black cat laying next to a phone"/>
-        <h1>Social media is toxic</h1>
-        <p>Stop doom scrolling, it gives sadness</p>
-      </div>
+        <h3>Social media is toxic</h3>
+        <figcaption>Stop doom scrolling, it gives sadness</figcaption>
+       </figure>
     </section>
     <section class="content">
       <h2>Leave a comment!</h2>
