--- a/src/pages/painting.html
+++ b/src/pages/painting.html
@@ -14,103 +14,103 @@
     </nav>
     <section class="text">These are some cool paintings that I made</section>
     <section class="cards">
-      <div class="card">
+      <figure>
         <img
           src="../../images/paintings/breadcat.jpg"
           alt="A painting of a cat with bread on it's head"
         />
-        <h1>Bread cat</h1>
-        <p>
+        <h3>Bread cat</h3>
+        <figcaption>
           Random cat that used to come to our garden, but royalty with bread on
           her head
-        </p>
-      </div>
-      <div class="card">
+        </figcaption>
+      </figure>
+      <figure>
         <img
           src="../../images/paintings/businesscat.jpg"
           alt="A painting of a black cat with a tie in front of a laptop"
         />
-        <h1>Business cat</h1>
-        <p>
+        <h3>Business cat</h3>
+        <figcaption>
           This is my friend's cat he was kinda fat and liked sitting in weird
           ways
-        </p>
-      </div>
-      <div class="card">
+        </figcaption>
+      </figure>
+      <figure>
         <img
           src="../../images/paintings/child.jpg"
           alt="A painting of a child on a bench"
         />
-        <h1>Dearest sister</h1>
-        <p>My little sister on a bench, looked kinda iconic</p>
-      </div>
-      <div class="card">
+        <h3>Dearest sister</h3>
+        <figcaption>My little sister on a bench, looked kinda iconic</figcaption>
+      </figure>
+      <figure>
         <img
           src="../../images/paintings/flowers.jpg"
           alt="A painting of orchids"
         />
-        <h1>Orchids</h1>
-        <p>Just some cool flowers I guess</p>
-      </div>
-      <div class="card">
+        <h3>Orchids</h3>
+        <figcaption>Just some cool flowers I guess</figcaption>
+      </figure>
+      <figure>
         <img
           src="../../images/paintings/forg.jpg"
           alt="A painting of a frog on lilly pads"
         />
-        <h1>Forg</h1>
-        <p>He's just hanging out in the swamp</p>
-      </div>
-      <div class="card">
+        <h3>Forg</h3>
+        <figcaption>He's just hanging out in the swamp</figcaption>
+      </figure>
+      <figure>
         <img
           src="../../images/paintings/frogking.jpg"
           alt="A painting of a frog in royal clothes"
         />
-        <h1>Frog king</h1>
-        <p>A royal rendition of the iconic frog drawing</p>
-      </div>
-      <div class="card">
+        <h3>Frog king</h3>
+        <figcaption>A royal rendition of the iconic frog drawing</figcaption>
+      </figure>
+      <figure>
         <img
           src="../../images/paintings/goose.jpg"
           alt="A digital painting of a goose"
         />
-        <h1>Goose</h1>
-        <p>I don't like geese they're evil</p>
-      </div>
-      <div class="card">
+        <h3>Goose</h3>
+        <figcaption>I don't like geese they're evil</figcaption>
+      </figure>
+      <figure>
         <img
           src="../../images/paintings/plant.jpg"
           alt="A painting of a plant"
         />
-        <h1>Plant</h1>
-        <p>Just a cool plant idk</p>
-      </div>
-      <div class="card">
+        <h3>Plant</h3>
+        <figcaption>Just a cool plant idk</figcaption>
+      </figure>
+      <figure>
         <img
           src="../../images/paintings/rabbit.jpg"
           alt="A painting of a rabbit in a forest"
         />
-        <h1>Rabbit</h1>
-        <p>Just thought it would be cute</p>
-      </div>
-      <div class="card">
+        <h3>Rabbit</h3>
+        <figcaption>Just thought it would be cute</figcaption>
+      </figure>
+      <figure>
         <img
           src="../../images/paintings/rooster.png"
           alt="A digital painting of a rooster"
         />
-        <h1>Rooster</h1>
-        <p>He has no other names</p>
-      </div>
-      <div class="card">
+        <h3>Rooster</h3>
+        <figcaption>He has no other names</figcaption>
+      </figure>
+      <figure>
         <img
           src="../../images/paintings/royalcats.jpg"
           alt="A painting of cats on a fancy chair"
         />
-        <h1>Royal cats</h1>
-        <p>I made this one for my friend Oliver it's his cats</p>
-      </div>
+        <h3>Royal cats</h3>
+        <figcaption>I made this one for my friend Oliver it's his cats</figcaption>
+      </figure>
     </section>
     <section>    
-      <h1>Leave a comment!</h1>
+      <h2>Leave a comment!</h2>
     </section>
     <form action="formSubmit.html">
       <input type="text" placeholder="Your name" />
