--- a/src/pages/formSubmit.html
+++ b/src/pages/formSubmit.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="../../build/styles/main.css" />
     <title>Kristina's Epic Stuff - Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <header>Kristina's Epic Stuff</header>
