--- a/src/pages/gifs.html
+++ b/src/pages/gifs.html
@@ -7,6 +7,12 @@
   </head>
   <script src="../scripts/gif.js"></script>
   <body>
+
+    <div class="overlay">
+      <div class="background"></div>   
+      <img>
+    </div>
+
     <header>Kristina's Epic Stuff</header>
     <nav>
       <a href="../../index.html">Home</a>
