--- a/src/pages/painting.html
+++ b/src/pages/painting.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
+
+    <div class="overlay">
+      <div class="background"></div>   
+      <img src="../../images/cat/bat.jpg">
+    </div>
+
     <header>Kristina's Epic Stuff</header>
     <nav>
       <a href="../../index.html">Home</a>
@@ -120,4 +126,5 @@
     </form>
   </body>
   <script src="../scripts/setTabindex.js"></script>
+  <script src="../scripts/overlayController.js"></script>
 </html>
