Add close button

--- a/src/pages/painting.html
+++ b/src/pages/painting.html
@@ -8,8 +8,9 @@
   <body>
 
     <div class="overlay">
+      <button>×</button>
       <div class="background"></div>   
-      <img src="../../images/cat/bat.jpg">
+      <img>
     </div>
 
     <header>Kristina's Epic Stuff</header>
